--- a/informe.Rmd
+++ b/informe.Rmd
@@ -29,6 +29,9 @@ Perfil educativo de la población adulta ocupada según el máximo nivel de ense
 ## Lectura de los archivos
 
 nivel_educativo_sexo_anio <- read_csv("datos/max_neduc_ocup_sexo__annio__n_instruc_limpio.csv")
+
+
+# mostramos las primeras 10 observaciones que nos permite considerar la distibución de hombres y mujeres y totales para las distintas categorias de nivel de instrucción que se han utilizado en el relevamiento
 head(nivel_educativo_sexo_anio,10)
 
 ```
@@ -48,14 +51,31 @@ names(nivel_educativo_sexo_anio)
 str(nivel_educativo_sexo_anio)
 
 #ver cantidad de filas (observaciones) y columnas (variables)
+
 nrow(nivel_educativo_sexo_anio)
 ncol(nivel_educativo_sexo_anio)
 
 
 ```
+```{r}
+#vericamos que no haya valores nulos en el data.frame
+
+any(is.na(nivel_educativo_sexo_anio$anio)) &
+any(is.na(nivel_educativo_sexo_anio$sexo)) &
+any(is.na(nivel_educativo_sexo_anio$nivel_instruccion)) &
+any(is.na(nivel_educativo_sexo_anio$porc_poblacion))
+
+```
+
+```{r}
+#verificamos que todos los valores sean positivos en la columna porcentaje
+
+filter(nivel_educativo_sexo_anio,porc_poblacion<0)
 
 
-los datos no tiene valores nulos ni negativos, la cantidad decimales de la columna de "porc_poblacion" difieren según los años, en el 2012 cuenta con 16 decimales y en el resto de los periodos tan solo cuenta con un decimal, se normalizó a 2 decimales creando la columna "porcentaje_poblacion"
+```
+
+Los datos observados no tiene valores nulos, ni negativos, la cantidad decimales de la columna de "porc_poblacion" difieren según los años, en el 2012 cuenta con 16 decimales y en el resto de los periodos tan solo cuenta con un decimal, se normalizó, para su mejor lectura, a 2 decimales creando la columna "porcentaje_poblacion"
 
 ```{r}
 
@@ -103,3 +123,4 @@ nivel_educativo_sexo_anio %>%
 
 ¿se incrementó el nivel educativo de la población ocupada de la Ciudad de Buenos Aires entre los años 2012 y 2019?
 ¿cómo se comporta de manera comparativa el nivel educativo, según el sexo de los ocupados, durante estos años?
+¿ se ha producido movilidad ascendente en el nivel educativo de los ocupados de la Ciudad de Buenos Aires, en el periodo 2012 y 2019 ?
