--- a/informe.Rmd
+++ b/informe.Rmd
@@ -16,7 +16,7 @@ library(dplyr)
 ## Introducción
 
 Los datos a utilizar en la elaboración del informe corresponde a Estadísticas sobre actividad, empleo, desocupación y subocupación de la población de la Ciudad de Buenos Aires -"Mercado laboral" el origen de la información se encuentra en el portal de Datos Abiertos de CABA "https://data.buenosaires.gob.ar/dataset/mercado-laboral".
-Se trata de un conjunto de datos tomados entre los años 2011 y 2019 y que fueran publicados durante el 2021. La fecha de su última actualización es mayor de 2021. 
+En este portal se encuentran un conjunto de datos tomados entre los años 2011 y 2019 y que fueran publicados durante el 2021. La fecha de su última actualización es mayo de 2021. 
 En este informe se procesarán datos correspondiente a la distribución de la población ocupada, según máximo nivel educativo alcanzado por hombres y mujeres. Datos tomados entre el 2012 y 2019, inclusive.
 
 Población ocupada según máximo nivel educativo.
@@ -58,7 +58,7 @@ ncol(nivel_educativo_sexo_anio)
 
 ```
 ```{r}
-#vericamos que no haya valores nulos en el data.frame
+#verificamos que no haya valores nulos en el data.frame
 
 any(is.na(nivel_educativo_sexo_anio$anio)) &
 any(is.na(nivel_educativo_sexo_anio$sexo)) &
@@ -75,7 +75,7 @@ filter(nivel_educativo_sexo_anio,porc_poblacion<0)
 
 ```
 
-Los datos observados no tiene valores nulos, ni negativos, la cantidad decimales de la columna de "porc_poblacion" difieren según los años, en el 2012 cuenta con 16 decimales y en el resto de los periodos tan solo cuenta con un decimal, se normalizó, para su mejor lectura, a 2 decimales creando la columna "porcentaje_poblacion"
+Los datos observados no tiene valores nulos, ni negativos, la cantidad de decimales de la columna de "porc_poblacion" difieren según los año: en el 2012 cuenta con 16 decimales y en el resto de los periodos tan solo cuenta con un decimal. Se normalizó, para su mejor lectura, a 2 decimales creando la columna "porcentaje_poblacion"
 
 ```{r}
 
@@ -83,13 +83,6 @@ nivel_educativo_sexo_anio<-nivel_educativo_sexo_anio %>%
   mutate(porcentaje_poblacion = round(porc_poblacion,2))
 
 ```
-
-
-
-¿Cuál es su valor medio y desvío estándard?
--   ¿Cuál es su rango (valor máximo y valor mínimo)?
--   ¿Hay alguna anomalía que sugiera que hay datos incorrectos? Valores imposibles (como valores negativos en una variable que sólo puede ser positiva) o poco creíbles.
--   ¿Cuántas observaciones hay por cada grupo? ¿Cuántos valores faltantes? ¿Hay diferencias?
 
 
 #valor medio y Desvío estándard por: sexo y nivel de instrucción
@@ -102,6 +95,10 @@ nivel_educativo_sexo_anio %>%
 
 
 ```
+El cuadro anterior nos permite visualizar el porcentaje promedio de máximo nivel educativo alcanzado por hombres y mujeres ocupados en el periodo 2012-2019. Comparando entre sexos de los ocupados, Si bien se observa que, para ambos sexos, el grueso de la población ocupada registra estudios superiores, este indicador es mayor para el caso de las mujeres, mientras que los varones registran mayor porcentaje en el rango de estudios secundarios. 
+Llama la atención el valor de la desviación estándar para el nivel "superior completo", para ambos sexos, lo que nos indica que hay un alta dispersión de valores entre los registros de los años. 
+
+
 # valor maximo y valor minimo
 
 ```{r}
@@ -113,7 +110,7 @@ nivel_educativo_sexo_anio %>%
             
 
 ```
-
+El rango entre valores máximos y mínimos de los porcentajes de ocupados según nivel educativo, nos vuelve a mostrar una dispersión de datos significativa entre los años 2012-2019 para el estrato de "nivel superior completo". 
 
 ```{r}
 
