--- a/informe.Rmd
+++ b/informe.Rmd
@@ -195,6 +195,10 @@ nivel_educativo_sexo_anio|>
 ```
 
 
+
+
+
+
 #Hipótesis 3
 ¿cómo se comporta de manera comparativa el nivel educativo, según el sexo de los ocupados, durante estos años? 
 
@@ -208,7 +212,7 @@ nivel_educativo_sexo_anio|>
   ggplot() +  
   geom_bar(aes(x = nivel_instruccion, y = promedio_poblacion, fill = sexo),
            stat = 'identity', position = 'dodge')+
-  labs(title = "Comparativa niveles de instrucción (2012-2019), por sexo de los ocupados", y="% promedio ocupados")+
+  labs(title = "Niveles de instrucción (2012-2019), por sexo de los ocupados", y="% promedio ocupados")+
   theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust=1))
 
 ```
@@ -216,12 +220,10 @@ nivel_educativo_sexo_anio|>
 
 
 
-
-
-
-
-
-
+```{r}
+archivos<-paste0("datos/",2012:2019, ".csv")
+datos<-list()
+```
 
 
 
